--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>.
         </div>
         <div id="nav-bar" >
-            <a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
+            <a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt="" loading="lazy" ></a>
             <h5>Bio-Growth</h5>
             <ul>
                 <li><a href="./pages/product.html">Products</a></li>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="frame-4-img">
-                <img src="images/frame-4.jpeg" alt="">
+                <img src="images/frame-4.jpeg" loading="lazy" alt="">
             </div>
         </div>
         <div class="benefits">
@@ -165,17 +165,17 @@
             <h5>At Biotech AgroTech, our personalized consultations provide tailored <br> guidance to optimize your farm's operations and maximize <br> productivity. Benefit from industry expertise, strategic planning, <br> problem-solving, and long-term support.</h5>
             <div class="consulting-flex">
                 <div class="flex-1">
-                    <img src="images/consulting-1.jpeg" alt="">
+                    <img src="images/consulting-1.jpeg" alt="" loading="lazy">
                     <h3>Personalized <br> Consultancy</h3>
                     <h5>Receive tailored advice and <br> recommendations based on your farm's <br> individual requirements and challenges.</h5>
                 </div>
                 <div class="flex-1">
-                    <img src="images/consulting-2.jpeg" alt="">
+                    <img src="images/consulting-2.jpeg" alt="" loading="lazy">
                     <h3>Industry <br> Expertise</h3>
                     <h5>Tap into the knowledge and experience of <br> our agricultural specialist who understand <br> the complexities of modern farming</h5>
                 </div>
                 <div class="flex-1">
-                    <img src="images/consulting-3.jpeg" alt="">
+                    <img src="images/consulting-3.jpeg" alt="" loading="lazy">
                     <h3>strategic  <br>Planning</h3>
                     <h5>Develop customized strategies and action <br> plans to optimize crop production, livestock <br> managment, and overall farm efficiency </h5>
                 </div>
@@ -188,19 +188,19 @@
         <button id="our-products">Blog</button>
         <div id="blog">
             <div class="blog-1">
-                <img src="images/blog-1.jpeg" alt="">
+                <img src="images/blog-1.jpeg" alt="" loading="lazy">
                 <h1>Unlocking Precision <br> Agriculture: A Farmer's Guide</h1>
                 <h5>Discover how innovative technologies like <br> GPS-guided equipment and remote sensing <br> are revolutionizing farming.</h5>
                 <a href="./pages/blog1.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
             </div>
             <div class="blog-1">
-                <img src="images/blog-2.jpeg" alt="">
+                <img src="images/blog-2.jpeg" alt="" loading="lazy">
                 <h1>Soil Health: Key Practices for <br> Sustainable Farming</h1>
                 <h5>Learn about soil testing, nutrient <br> management, and cover cropping for <br> healthier soils and better yields</h5>
                 <a href="./pages/blog2.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
             </div>
             <div class="blog-1">
-                <img src="images/blog-3.jpeg" alt="">
+                <img src="images/blog-3.jpeg" alt="" loading="lazy">
                 <h1>Integrated Pest Management: <br> A Holistic Approach</h1>
                 <h5>Explore strategies like biological controls and <br> targeted pesticide applications for effective <br> pest management.</h5>
                 <a href="./pages/blog3.html"><button class="learn-btn" >Read more<span class="arrow">&#10140;</span></button></a>
