--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -35,10 +35,10 @@
             <h1>Our Team</h1>
             <h2>Our team of experts includes agronomists, soil scientists, agricultural <br> engineers, and nutrition specialists. Each member brings a wealth of <br> knowledge and experience to the table, allowing us to offer comprehensive <br>solutions tailored to the unique needs of every farm. We are passionate about <br>what we do and dedicated to supporting the agricultural community.</h2>
         </div>
-        <img src="../assets/images/about-us1.jpeg" alt="">
+        <img src="../assets/images/about-us1.jpeg" alt="" loading="lazy">
     </div>
     <div class="our-story">
-        <img src="../assets/images/about-us2.jpeg" alt="">
+        <img src="../assets/images/about-us2.jpeg" alt="" loading="lazy">
         <div id="our-story">
             <h1>Our Story</h1>
             <h2>Bio Growth was founded with a vision to transform the agricultural industry <br> through advanced research and development. We recognized the need for <br> more efficient, sustainable, and effective agricultural practices. Since our <br> inception, we have been committed to providing top-quality products and <br> services that help farmers achieve their goals.</h2>
