--- a/pages/growth-plan.html
+++ b/pages/growth-plan.html
@@ -58,17 +58,17 @@
     <div class="growth-plan-product">
         <div class="product-1">
             <p>Bio-Pet small <br> Animal Food</p>
-            <img src="../assets/images/1a32713a0bd5f6b84abfe47f510bfb98.png" alt="">
+            <img src="../assets/images/1a32713a0bd5f6b84abfe47f510bfb98.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Root<br> stimulant</p>
-            <img src="../assets/images/bio-root stimulant.png" alt="">
+            <img src="../assets/images/bio-root stimulant.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed premium <br>Livestock Feed</p>
-            <img src="../assets/images/biofeed livestock premium.png" alt="">
+            <img src="../assets/images/biofeed livestock premium.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
@@ -90,17 +90,17 @@
     <div class="growth-plan-product">
         <div class="product-1">
             <p>Bio-Guard Plant <br> Pest Repellant</p>
-            <img src="../assets/images/biofeed pest reppelant.png" alt="">
+            <img src="../assets/images/biofeed pest reppelant.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed<br> All-purpose Plant Food</p>
-            <img src="../assets/images/bio-boost livestock.png" alt="">
+            <img src="../assets/images/bio-boost livestock.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Feed poultry <br>Feed supplement</p>
-            <img src="../assets/images/bio-grow all purpose.png" alt="">
+            <img src="../assets/images/bio-grow all purpose.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
@@ -122,29 +122,29 @@
     <div class="growth-plan-product">
         <div class="product-1">
             <p>Bio-Guard Livestock <br> Insect Repellent</p>
-            <img src="../assets/images/insect repellant.png" alt="">
+            <img src="../assets/images/insect repellant.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Boost <br> Organic Compost</p>
-            <img src="../assets/images/organic compost.png" alt="">
+            <img src="../assets/images/organic compost.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
         <div class="product-1">
             <p>Bio-Grow <br> PH Adjuster</p>
-            <img src="../assets/images/PH adjuster.png" alt="">
+            <img src="../assets/images/PH adjuster.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
         <div class="growth-plan-product">
         <div class="product-1">
             <p>Bio-Shield <br> Livestock Sunscreen</p>
-            <img src="../assets/images/livestock sunscreen.png" alt="">
+            <img src="../assets/images/livestock sunscreen.png" alt="" loading="lazy">
             <a href="./add-cart.html"><i>+ Add to cart</i></a>
         </div>
     </div>
     <div class="footer">
-        <img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt="">
+        <img src="../assets/images/Bio_Growth_logo-removebg-preview.png" alt="" >
         <h5>Bio-Growth</h5>
         <div class="footer-info-1">
             <a href="">Company</a>
