--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h3>Countries</h3>
             </div>
             <div>
-                <h1>$ 1 Billion</h1>
+                <h1>N1 Billion</h1>
                 <h3>In Research Investment</h3>
             </div>
         </div>
@@ -75,18 +75,18 @@
         <div class="plans">
             <div class="growth-plan">
                 <h4 class="main-head">Growth Plan</h3>
-                <h3 class="main-price" >N53,000<span >permonth</span></h3> 
+                <h3 class="main-price" >N508,800<span >permonth</span></h3> 
                 <button class="gt-started" >Get Started</button>
                 <h4 class="Features" >Features</h4>
                 <h5 class="main-txt">Everything in the growth plan.</h5>
                 <h5 class="items" ><i class="fa-regular fa-circle-check"></i>Access to 10 of our feed products for crops and livestock</h5>
                 <h5 class="items"><i class="fa-regular fa-circle-check"></i>Monthly newsletter with agricultural tips and insights</h5>
                 <h5 class="items"><i class="fa-regular fa-circle-check"></i>Email support</h5>
-                <h6 class="card-footer">Ideal for 100 acres of land and 200 head <br> of livestock.</h6>
+                <h6 class="card-footer">Ideal for 100 acres of land and 200 head of livestock.</h6>
             </div>
             <div class="Pro-plan">
                 <h3 class="main-head">Pro Plan</h3>
-                <h3 class="main-price">N107,500<span id="Per-month">permonth</span></h3> 
+                <h3 class="main-price">N1,032,000<span id="Per-month">permonth</span></h3> 
                 <button class="gt-started">Get Started</button>
                 <h4 class="Features">Features</h4>
                 <h5 class="main-txt" >Everything in the growth plan.</h5>
@@ -98,7 +98,7 @@
             </div>
             <div class="Elite-plan">
                 <h3 class="main-head">Elite Plan</h3>
-                <h3 class="main-price">N215,150<span>permonth</span></h3> 
+                <h3 class="main-price">N2,045,440<span>permonth</span></h3> 
                 <button class="gt-started">Get Started</button>
                 <h4 class="Features">Features</h4>
                 <h5 class="main-txt">Everything in the growth plan.</h5>
@@ -106,7 +106,7 @@
                 <h5 class="items"><i class="fa-regular fa-circle-check"></i>Weekly newsletter with exclusive <br> content and case studies</h5>
                 <h5 class="items"><i class="fa-regular fa-circle-check"></i>Priority email and phone support</h5>
                 <h5 class="items"><i class="fa-regular fa-circle-check"></i>Monthly consultation session with an <br> agricultural expert</h5>
-                <h6 class="card-footer">Ideal for 100 acres of land and 200 head <br> of livestock.</h6>
+                <h6 class="card-footer">Ideal for 100 acres of land and 200 head of livestock.</h6>
             </div>
         </div>
         <button id="our-products">Plants and livestock</button>
@@ -117,7 +117,7 @@
                     Nutrition And Growth
                 </h3>
                 <h5>
-                    At Biotech AgroTech, we provide advanced feed solutions for both <br> crops and livestock. From specialized fertilizers enriched with  <br>micronutrients to high-quality feed additives, our products maximize <br> growth and health. Trust Biotech AgroTech for optimal farm nutrition.
+                    At Biotech AgroTech, we provide advanced feed solutions for both <br> crops and livestock. From specialized fertilizers enriched with  <br>micronutrients to high-quality feed additives, our products maximize growth and health. Trust Biotech AgroTech for optimal farm nutrition.
                 </h5>
                 <div class="see-products">
                     <a href="./pages/signup.html"><button>Sign Up</button></a>
@@ -134,7 +134,7 @@
                     Cutting edge solutions <br>for optimal nutrition and <br>growth
                 </h3>
                 <h5 class="sub-info">
-                    Our innovative formualrs provide  <br>exceptional nutrition for palnt and livestock.
+                    Our innovative formulars provide  <br>exceptional nutrition for palnt and livestock.
                 </h5>
                 <button class="learn-btn">Learn more <span class="arrow">&#10140;</span></button>
             </div>
@@ -143,7 +143,7 @@
                     Expert consuting services <br> for maximum efficiency <br> and profitability
                 </h3>
                 <h5 class="sub-info" >
-                    Our team of expert offers comperhensive <br>agricultral consulting services.
+                    Our team of expert offers comperhensive agricultral consulting services.
                 </h5>
                 <button class="learn-btn">Learn more <span class="arrow">&#10140;</span></button>
             </div>
@@ -167,17 +167,17 @@
                 <div class="flex-1">
                     <img src="images/consulting-1.jpeg" alt="" loading="lazy">
                     <h3>Personalized <br> Consultancy</h3>
-                    <h5>Receive tailored advice and <br> recommendations based on your farm's <br> individual requirements and challenges.</h5>
+                    <h5>Receive tailored advice and <br> recommendations based on your farm's individual requirements and challenges.</h5>
                 </div>
                 <div class="flex-1">
                     <img src="images/consulting-2.jpeg" alt="" loading="lazy">
                     <h3>Industry <br> Expertise</h3>
-                    <h5>Tap into the knowledge and experience of <br> our agricultural specialist who understand <br> the complexities of modern farming</h5>
+                    <h5>Tap into the knowledge and <br> experience of our agricultural specialist who understand the complexities of modern farming</h5>
                 </div>
                 <div class="flex-1">
                     <img src="images/consulting-3.jpeg" alt="" loading="lazy">
                     <h3>strategic  <br>Planning</h3>
-                    <h5>Develop customized strategies and action <br> plans to optimize crop production, livestock <br> managment, and overall farm efficiency </h5>
+                    <h5>Develop customized strategies and action plans to optimize crop production, livestock <br> managment, and overall farm efficiency </h5>
                 </div>
             </div>
             <div class="consulting-buttons">
@@ -213,7 +213,7 @@
                 <div class="slides">
                     <div class="slide">
                         <div class="testimonials-1">
-                            <h5>Biogrowth's subscription plans <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aspernatur ipsum libero odio ipsam. Delectus itaque quia iste libero quas laborum, quidem dolor quae repudiandae officiis culpa necessitatibus! Debitis, placeat?</h5>
+                            <h5>Biogrowth's subscription plans <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aspernatur ipsum libero odio ipsam. Delectus itaque quia iste libero quas laborum, quidem dolor Lorem ipsum dolor sit </h5>
                             <div class="testimonial-image">
                                 <img src="images/testimonials-1.jpeg" alt="">
                                 <div class="testimonial-name">
@@ -258,7 +258,7 @@
                         </div>
         
                         <div class="testimonials-1">
-                            <h5>As an agronomist, I'm always <br> looking for innovative solutions to <br> recommend to my clients. <br> Biogrowth Agrotech's consultation <br> services have been invaluable in <br> helping farmers optimize their <br> operations and achieve greater <br> success.</h5>
+                            <h5>As an agronomist, I'm always <br> looking for innovative solutions to <br> recommend to my clients. <br> Biogrowth Agrotech's consultation services have been invaluable in helping farmers optimize their operations and achieve greater success.</h5>
                             <div class="testimonial-image">
                                 <img src="images/testimonials-2.jpeg" alt="">
                                 <div class="testimonial-name">
@@ -269,7 +269,7 @@
                         </div>
         
                         <div class="testimonials-1">
-                            <h5>I've been using Biogrowth <br> Agrotech's feed products for years, <br> and I couldn't be happier with the <br> results. Their premium-quality  <br> feeds have significantly improved <br> the health and performance of my <br> livestock, leading to higher profits <br> for my farm</h5>
+                            <h5>I've been using Biogrowth <br> Agrotech's feed products for years, and I couldn't be happier with the results. Their premium-quality feeds have significantly improved the health and performance of my livestock, leading to higher profits.</h5>
                             <div class="testimonial-image">
                                 <img src="images/testimonials-3.jpeg" alt="">
                                 <div class="testimonial-name">
