--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
 </head>
 <body>
-    <div class="hero">
-        <div>.
-        </div>
+    <!-- <div class="hero">
         <div id="nav-bar" >
             <a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt="" loading="lazy" ></a>
             <h5>Bio-Growth</h5>
@@ -26,6 +24,7 @@
             </ul>
            <button id="btn-2" onclick="login()">Log in</button>
            <button id="btn-1" onclick="signup()">Sign Up</button>
+           <a href="javascript:void(0);" class="toggle-button" onclick="toggleNavbar()">&#9776;</a>
         </div>
         <div class="hero-info">
             <h1>Revolutionary Solutions for <br> Plant and Animal Feed</h1>
@@ -35,7 +34,46 @@
                 <a href="./pages/signup.html"><button id="hero-btn-2">Sign Up</button></a>
             </div>
         </div>
-    </div>
+    </div> -->
+    <header>
+        <div class="space">
+            .
+        </div>
+        <div class="navbar">
+            <div class="logo"><a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+            <ul class="links">
+                <li>
+                    <a href="">products</a>
+                    <a href="">consulting</a>
+                    <a href="">Blog</a>
+                    <a href="">Company</a>
+                </li>
+            </ul>
+            <a href="" class="action_btn-1">Login</a>
+            <a href="" class="action_btn">Sign up</a>
+            <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+        </div>
+        <div class="dropdown_menu open"> 
+            <ul class="links">
+                <li>
+                    <a href="">products</a>
+                    <a href="">consulting</a>
+                    <a href="">Blog</a>
+                    <a href="">Company</a>
+                </li>
+            </ul>
+            <a href="" class="action_btn-1">Login</a>
+            <a href="" class="action_btn">Sign up</a>
+        </div>
+        <div class="hero-info">
+            <h1>Revolutionary Solutions for <br> Plant and Animal Feed</h1>
+            <h3>Discover our cutting-edge formulas that optimize nutrition and <br> growth for your crops and livestock.</h3>
+            <div class="hero-button">
+                <button id="hero-btn-1">Learn More</button>
+                <a href="./pages/signup.html"><button id="hero-btn-2">Sign Up</button></a>
+            </div>
+        </div>
+    </header>
     <div class="subsection">
         <div class="achievment">
             <div>
