--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h3>Expert Consultation for <br>
                 Agricultural Excellence
             </h3>
-            <h5>At Biotech AgroTech, our personalized consultations provide tailored <br> guidance to optimize your farm's operations and maximize <br> productivity. Benefit from industry expertise, strategic planning, <br> problem-solving, and long-term support.</h5>
+            <h5>At Biotech AgroTech, our personalized consultations provide tailored guidance to optimize your farm's operations and maximize productivity. Benefit from industry expertise, strategic planning, <br> problem-solving, and long-term support.</h5>
             <div class="consulting-flex">
                 <div class="flex-1">
                     <img src="images/consulting-1.jpeg" alt="" loading="lazy">
@@ -367,7 +367,7 @@
     </div>
     <div class="footer">
         <img src="./images/Bio_Growth_logo-removebg-preview.png" alt="">
-        <h5>Bio-Growth</h5>
+        <h5>Bio-Growth</h5> 
         <div class="footer-info-1">
             <a href="">Company</a>
             <a href="">Features</a>
