--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
             <div class="logo"><a href="index.html"><img src="images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
             <ul class="links">
                 <li>
-                    <a href="">products</a>
-                    <a href="">consulting</a>
-                    <a href="">Blog</a>
-                    <a href="">Company</a>
+                    <a href="./pages/product.html">products</a>
+                    <a href="./pages/consulting-page.html">consulting</a>
+                    <a href="./pages/blog-page.html">Blog</a>
+                    <a href="./pages/about-us.html">Company</a>
                 </li>
             </ul>
-            <a href="" class="action_btn-1">Login</a>
-            <a href="" class="action_btn">Sign up</a>
+            <a href="./pages/login.html" class="action_btn-1">Login</a>
+            <a href="./pages/signup.html" class="action_btn">Sign up</a>
             <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
         </div>
         <div class="dropdown_menu open"> 
             <ul class="links">
                 <li>
-                    <a href="">products</a>
-                    <a href="">consulting</a>
-                    <a href="">Blog</a>
-                    <a href="">Company</a>
+                    <a href="./pages/product.html">products</a>
+                    <a href="./pages/consulting-page.html">consulting</a>
+                    <a href="./pages/blog-page.html">Blog</a>
+                    <a href="./pages/about-us.html">Company</a>
                 </li>
             </ul>
-            <a href="" class="action_btn-1">Login</a>
-            <a href="" class="action_btn">Sign up</a>
+            <a href="./pages/login.html" class="action_btn-1">Login</a>
+            <a href="./pages/signup.html" class="action_btn">Sign up</a>
         </div>
         <div class="hero-info">
             <h1>Revolutionary Solutions for <br> Plant and Animal Feed</h1>
