--- a/pages/signup.html
+++ b/pages/signup.html
@@ -11,21 +11,35 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="hero">
-        <div>.
-        </div>
-        <div id="nav-bar" >
-            <a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
-            <h5>Bio-Growth</h5>
-            <ul>
-                <li><a href="./product.html">Products</a></li>
-                <li><a href="./consulting-page.html">Consulting</a></li>
-                <li><a href="./blog-page.html">Blog</a></li>
-                <li><a href="./about-us.html">Company</a></li>    
-            </ul>
-           <button id="btn-2" onclick="login()">Log in</button>
-           <button id="btn-1" onclick="signup()">Sign Up</button>
-        </div>
+    <div class="space">
+        .
+    </div>
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="./pages/product.html">products</a>
+                <a href="./pages/consulting-page.html">consulting</a>
+                <a href="./pages/blog-page.html">Blog</a>
+                <a href="./pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="./pages/login.html" class="action_btn-1">Login</a>
+        <a href="./pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+    </div>
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="./pages/product.html">products</a>
+                <a href="./pages/consulting-page.html">consulting</a>
+                <a href="./pages/blog-page.html">Blog</a>
+                <a href="./pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="./pages/login.html" class="action_btn-1">Login</a>
+        <a href="./pages/signup.html" class="action_btn">Sign up</a>
+    </div>
         <div class="signup-info">
             <form action="" class="signup-form">
                
@@ -150,6 +164,6 @@
             </div>
         </div>
     </div>
-    <script src="/js/signup.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
