--- a/pages/signup.html
+++ b/pages/signup.html
@@ -12,33 +12,32 @@
 </head>
 <body>
     <div class="space">
-        .
     </div>
     <div class="navbar">
         <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
         <ul class="links">
             <li>
-                <a href="./pages/product.html">products</a>
-                <a href="./pages/consulting-page.html">consulting</a>
-                <a href="./pages/blog-page.html">Blog</a>
-                <a href="./pages/about-us.html">Company</a>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
             </li>
         </ul>
-        <a href="./pages/login.html" class="action_btn-1">Login</a>
-        <a href="./pages/signup.html" class="action_btn">Sign up</a>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
         <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
     </div>
     <div class="dropdown_menu open"> 
         <ul class="links">
             <li>
-                <a href="./pages/product.html">products</a>
-                <a href="./pages/consulting-page.html">consulting</a>
-                <a href="./pages/blog-page.html">Blog</a>
-                <a href="./pages/about-us.html">Company</a>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
             </li>
         </ul>
-        <a href="./pages/login.html" class="action_btn-1">Login</a>
-        <a href="./pages/signup.html" class="action_btn">Sign up</a>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
         <div class="signup-info">
             <form action="" class="signup-form">
@@ -46,7 +45,7 @@
                 <h1>Sign Up for BioGrowth <br> Membership</h1>
                 <div class="progress-bar">
                     <h5>Personal Information</h5>
-                    <h5>Account</h5>
+                    <h5 id="left-space">Account</h5>
                 </div>
                 <div class="progress">
                     <div id="chart" >.</div>
