--- a/pages/product.html
+++ b/pages/product.html
@@ -13,21 +13,34 @@
 </head>
 <body>
     <div class="hero">
-        <div>.
+        <div class="space">
         </div>
-        <div id="nav-bar" >
-            <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-            <h5>Bio-Growth</h5>
-            <ul>
-                <li><a href="/pages/product.html">Products</a></li>
-                <li><a href="./consulting-page.html">Consulting</a></li>
-                <li><a href="./blog-page.html">Blog</a></li>
-                <li><a href="./about-us.html">Company</a></li>    
+        <div class="navbar">
+            <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+            <ul class="links">
+                <li>
+                    <a href="/pages/product.html">products</a>
+                    <a href="/pages/consulting-page.html">consulting</a>
+                    <a href="/pages/blog-page.html">Blog</a>
+                    <a href="/pages/about-us.html">Company</a>
+                </li>
             </ul>
-           <button id="btn-2" onclick="login()">Log in</button>
-           <button id="btn-1" onclick="signup()">Sign Up</button>
+            <a href="/pages/login.html" class="action_btn-1">Login</a>
+            <a href="/pages/signup.html" class="action_btn">Sign up</a>
+            <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
         </div>
-    </div>
+        <div class="dropdown_menu open"> 
+            <ul class="links">
+                <li>
+                    <a href="/pages/product.html">products</a>
+                    <a href="/pages/consulting-page.html">consulting</a>
+                    <a href="/pages/blog-page.html">Blog</a>
+                    <a href="/pages/about-us.html">Company</a>
+                </li>
+            </ul>
+            <a href="/pages/login.html" class="action_btn-1">Login</a>
+            <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        </div>
     <p id="first-info" >Grow with confidence</p>
     <nav>
         <ul>
@@ -42,7 +55,7 @@
             <h3>Growth plan</h3>
             <h4>Elevate Your Farming Journey with <br>BioGrowth's Growth Plan</h4>
             <h5>
-                Unlock Essential Agricultural Solutions for Small to Medium- <br>
+                Unlock Essential Agricultural Solutions for Small to Medium-
                 Sized Farms with our growth Subscription Package.
             </h5>
             <div class="see-products">
@@ -75,7 +88,7 @@
             <h3>Pro Plan</h3>
             <h4>Experience Enhanced Farming <br> Efficiency with BioGrowth's Pro Plan</h4>
             <h5>
-                Optimize Your Mid-Sized Farm Operations with our <br> Standard Subscription Package, Offering Comprehensive  <br>Solutions for Maximum Yield.
+                Optimize Your Mid-Sized Farm Operations with our Standard Subscription Package, Offering Comprehensive  <br>Solutions for Maximum Yield.
             </h5>
             <div class="see-products">
                 <button class="learn-btn">See plan <span class="arrow">&#10140;</span></button>
