--- a/pages/product.html
+++ b/pages/product.html
@@ -12,7 +12,6 @@
 
 </head>
 <body>
-    <div class="hero">
         <div class="space">
         </div>
         <div class="navbar">
@@ -86,7 +85,7 @@
     <div class="frame-4">
         <div class="frame-4-info">
             <h3>Pro Plan</h3>
-            <h4>Experience Enhanced Farming <br> Efficiency with BioGrowth's Pro Plan</h4>
+            <h4>Experience Enhanced Farming Efficiency with BioGrowth's Pro Plan</h4>
             <h5>
                 Optimize Your Mid-Sized Farm Operations with our Standard Subscription Package, Offering Comprehensive  <br>Solutions for Maximum Yield.
             </h5>
@@ -118,7 +117,7 @@
     <div class="frame-4">
         <div class="frame-4-info">
             <h3>Elite Plan</h3>
-            <h4>Elevate Your Farming to Elite Levels <br> with BioGrowth's Elite Plan</h4>
+            <h4>Elevate Your Farming to Elite Levels with BioGrowth's Elite Plan</h4>
             <h5>
                 Maximize Productivity on Large-Scale Operations with our <br> Premium Subscription Package, Featuring Top-Tier <br> Products <br>Solutions for Maximum Yield.
             </h5>
@@ -132,7 +131,7 @@
     </div>
     <div class="growth-plan-product">
         <div class="product-1">
-            <p>Bio-Mulch Organic <br> Mulching Material</p>
+            <p>Bio-Mulch Organic Mulching Material</p>
             <img src="../assets/images/2ded4c7d1673dbf28a14a7035e379ec5.png" alt="">
             <i>Not Availaible in your plan</i>
         </div>
