--- a/pages/pro-plan.html
+++ b/pages/pro-plan.html
@@ -12,23 +12,33 @@
 
 </head>
 <body>
-    <div class="hero">
-        <div>.
-        </div>
-        <div id="nav-bar" >
-            <a href="/index.html"><img src="/assets/images/Bio_Growth_logo-removebg-preview copy 2.png" alt=""></a>
-            <h5>Bio-Growth</h5>
-            <ul>
-                <li><a href="./product.html">Products</a></li>
-                <li><a href="./consulting-page.html">Consulting</a></li>
-                <li><a href="./blog-page.html">Blog</a></li>
-                <li><a href="./about-us.html">Company</a></li>    
-            </ul>
-           <button id="btn-2" onclick="login()">Log in</button>
-           <button id="btn-1" onclick="signup()">Sign Up</button>
-        </div>
+    <div class="space">
     </div>
-        </div>
+    <div class="navbar">
+        <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
+        <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+    </div>
+    <div class="dropdown_menu open"> 
+        <ul class="links">
+            <li>
+                <a href="/pages/product.html">products</a>
+                <a href="/pages/consulting-page.html">consulting</a>
+                <a href="/pages/blog-page.html">Blog</a>
+                <a href="/pages/about-us.html">Company</a>
+            </li>
+        </ul>
+        <a href="/pages/login.html" class="action_btn-1">Login</a>
+        <a href="/pages/signup.html" class="action_btn">Sign up</a>
     </div>
     <p id="first-info" >Grow with confidence</p>
     <nav>
