--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -12,28 +12,42 @@
 </head>
 <body>
     <div class="hero">
-        <div>.
+        <div class="space">.
         </div>
-        <div id="nav-bar" >
-            <a href="../index.html"><img src="../images/Bio_Growth_logo-removebg-preview.png" alt=""></a>
-            <h5>Bio-Growth</h5>
-            <ul>
-                <li><a href="./product.html">Products</a></li>
-                <li><a href="./consulting-page.html">Consulting</a></li>
-                <li><a href="./blog-page.html">Blog</a></li>
-                <li><a href="./about-us.html">Company</a></li>    
+        <div class="navbar">
+            <div class="logo"><a href="/index.html"><img src="/images/Bio_Growth_logo-removebg-preview.png" alt=""></a><p>Bio Growth</p></div>
+            <ul class="links">
+                <li>
+                    <a href="/pages/product.html">products</a>
+                    <a href="/pages/consulting-page.html">consulting</a>
+                    <a href="/pages/blog-page.html">Blog</a>
+                    <a href="/pages/about-us.html">Company</a>
+                </li>
             </ul>
-           <button id="btn-2" onclick="login()">Log in</button>
-           <button id="btn-1" onclick="signup()">Sign Up</button>
+            <a href="/pages/login.html" class="action_btn-1">Login</a>
+            <a href="/pages/signup.html" class="action_btn">Sign up</a>
+            <div class="toggle_btn"><i class="fa-solid fa-bars icon"></i></div>
+        </div>
+        <div class="dropdown_menu open"> 
+            <ul class="links">
+                <li>
+                    <a href="/pages/product.html">products</a>
+                    <a href="/pages/consulting-page.html">consulting</a>
+                    <a href="/pages/blog-page.html">Blog</a>
+                    <a href="/pages/about-us.html">Company</a>
+                </li>
+            </ul>
+            <a href="/pages/login.html" class="action_btn-1">Login</a>
+            <a href="/pages/signup.html" class="action_btn">Sign up</a>
         </div>
         <h1>About Us</h5>
-        <h2>At Bio Growth, we are dedicated to revolutionizing agriculture with cutting- <br> edge solutions and innovative approaches to plant and animal nutrition. <br> Our mission is to empower farmers and agricultural businesses with the <br> tools and expertise needed to enhance productivity, sustainability, and <br> profitability. 
+        <h2>At Bio Growth, we are dedicated to revolutionizing agriculture with cutting-edge solutions and innovative approaches to plant and animal nutrition. Our mission is to empower farmers and agricultural businesses with the tools and expertise needed to enhance productivity, sustainability, and profitability. 
         </h2>
     </div>
     <div class="our-team">
         <div id="our-team">
             <h1>Our Team</h1>
-            <h2>Our team of experts includes agronomists, soil scientists, agricultural <br> engineers, and nutrition specialists. Each member brings a wealth of <br> knowledge and experience to the table, allowing us to offer comprehensive <br>solutions tailored to the unique needs of every farm. We are passionate about <br>what we do and dedicated to supporting the agricultural community.</h2>
+            <h2>Our team of experts includes agronomists, soil scientists, agricultural engineers, and nutrition specialists. Each member brings a wealth of knowledge and experience to the table, allowing us to offer comprehensive solutions tailored to the unique needs of every farm. We are passionate about what we do and dedicated to supporting the agricultural community.</h2>
         </div>
         <img src="../assets/images/about-us1.jpeg" alt="" loading="lazy">
     </div>
@@ -41,7 +55,7 @@
         <img src="../assets/images/about-us2.jpeg" alt="" loading="lazy">
         <div id="our-story">
             <h1>Our Story</h1>
-            <h2>Bio Growth was founded with a vision to transform the agricultural industry <br> through advanced research and development. We recognized the need for <br> more efficient, sustainable, and effective agricultural practices. Since our <br> inception, we have been committed to providing top-quality products and <br> services that help farmers achieve their goals.</h2>
+            <h2>Bio Growth was founded with a vision to transform the agricultural industry through advanced research and development. We recognized the need for more efficient, sustainable, and effective agricultural practices. Since our inception, we have been committed to providing top-quality products and services that help farmers achieve their goals.</h2>
         </div>
     </div>
     <div class="why-biogrowth">
@@ -49,26 +63,26 @@
         <div id="why-choose-bio-growth">
             <div class="why-1">
                 <h1>Innovation</h1>
-                <h2>We leverage the latest research and <br> technology to develop cutting-edge <br> agricultural solutions.</h2>
+                <h2>We leverage the latest research and technology to develop cutting-edge agricultural solutions.</h2>
             </div>
             <div class="why-1">
                 <h1>Expertise</h1>
-                <h2>Our team of specialists provides <br> knowledgeable and practical advice <br> tailored to your specific needs.</h2>
+                <h2>Our team of specialists provides knowledgeable and practical advice tailored to your specific needs.</h2>
             </div>
             <div class="why-1">
                 <h1>support</h1>
-                <h2> Our ongoing support ensures that you get <br> the most out of our products and services, <br> with continued assistance as needed.</h2>
+                <h2> Our ongoing support ensures that you get the most out of our products and services, with continued assistance as needed.</h2>
             </div>
         </div>
         </div>
     <div class="our-committment">
         <h1>Our Commitment to Sustainability</h1>
-        <h2>Sustainability is at the core of our operations. We are committed to promoting practices that protect <br> the environment, conserve resources, and ensure the long-term health of our ecosystems. By <br> integrating sustainable methods into our products and services, we help farmers reduce their <br> environmental impact and build resilient agricultural systems.
+        <h2>Sustainability is at the core of our operations. We are committed to promoting practices that protect the environment, conserve resources, and ensure the long-term health of our ecosystems. By integrating sustainable methods into our products and services, we help farmers reduce their environmental impact and build resilient agricultural systems.
         </h2>
     </div>
     <div class="Join-us">
         <h1>Join us on our Journey</h1>
-        <h2>At Bio Growth, we believe in the power of innovation and collaboration to <br> drive positive change in agriculture. Join us on our journey to create a <br> more sustainable, productive, and profitable future for farming. Contact us <br> today to learn more about our products, services, and how we can help <br> you achieve your agricultural goals. <br></h2>
+        <h2>At Bio Growth, we believe in the power of innovation and collaboration to drive positive change in agriculture. Join us on our journey to create a more sustainable, productive, and profitable future for farming. Contact us today to learn more about our products, services, and how we can help  you achieve your agricultural goals.</h2>
     </div>
     <div class="newsletter">
         <h1>Subscribe to our Newsletter</h1>
